# TI_Assignment2

./: CMakeLists.txt  Nodes.txt  main.cpp  new.txt  text.txt
NodesLoader/: Node.cpp  Node.h  NodesLoader.h
Step1/: FileReader.cpp  FileReader.h
Step2/: ShannonFanoDecoder.cpp  ShannonFanoDecoder.h
